--- a/app/templates/admin_1/sentimentanalysis_socialmedia.html
+++ b/app/templates/admin_1/sentimentanalysis_socialmedia.html
@@ -63,7 +63,7 @@
                     <div id="user" class="tab-pane fade">
                         <br />
                         <div id='searchBoxUser' class="col-sm-12">
-                            <label id='searchLabelUser' for='searchTextUser' type="text">Search by UserID</label>
+                            <label id='searchLabelUser' for='searchTextUser' type="text">Search by User</label>
                             <input type="text" name='searchTextUser' id='searchTextUser'  placeholder="Search for...">
                             <button id='filterBtnUser' type="button" class="btn btn-primary">
                                 <span class="glyphicon glyphicon-filter"></span>
